@@ -1,3 +1,8 @@
+2010-11-20  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-gravatar.el (gnus-gravatar-transform-address): Decode name again.
+	(gnus-gravatar-insert): Put avatar always in the beginning of the field.
+
 2010-11-19  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gnus-art.el (gnus-mime-display-single)
